# BiblioteKA

./: .env.example  .gitignore  README.md  pyproject.toml
_project/: settings.py  urls.py
books/: models.py  permissions.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_users_following.py  0003_alter_book_users_following.py  0004_book_max_loan_time_book_quantity.py  0005_alter_book_title.py  0006_alter_book_users_following.py  0007_alter_book_title.py
copies/: models.py  serializers.py  views.py
copies/migrations/: 0001_initial.py  0002_alter_copy_book.py  0003_remove_copy_max_loan_time_copy_available.py
following/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
following/migrations/: 0001_initial.py  0002_bookfollowers_delete_follow.py  0003_rename_bookfollowers_followers.py  0004_rename_book_followers_book_id_and_more.py  0005_rename_follower_id_followers_user_id.py  0006_alter_followers_book_id.py  0007_alter_followers_book_id_and_more.py  0008_rename_followers_follower.py  0009_rename_book_id_follower_book_and_more.py
loans/: models.py  permissions.py  serializers.py  urls.py  views.py
loans/migrations/: 0001_initial.py  0002_loan_copy_loan_loaner_loan_return_date.py  0003_alter_loan_loaner.py  0004_alter_loan_copy_alter_loan_loaner_and_more.py  0005_loan_returned_date.py  0006_rename_returned_date_loan_returned.py
templates/: book_available.html
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0004_alter_user_role.py  (+6 more)
utils/: generic_set_views.py
(+2 files in other folders)
